fix nav align and button min -width

--- a/src/components/Header/header.module.pcss
+++ b/src/components/Header/header.module.pcss
@@ -262,6 +262,10 @@
 		}
 	}
 
+	&.is__product li:first-child {
+		margin-right: auto;
+	}
+
 	& li:last-child {
 		margin-right: 0;
 		padding-right: 0;
@@ -270,6 +274,10 @@
 	& li.is__alt {
 		opacity: 1;
 		margin-left: auto;
+	}
+
+	&.is__product li.is__alt {
+		margin-left: 0;
 	}
 }
 
